Cambios que corrigen que no se muestre TripAdvisor widget

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@
 /public_html/img
 public_html/.htaccess
 public_html/.htaccess
+public_html/app
+public_html/images
+public_html/banners
+public_html/includes
+royalreservations06.09.2016.zip
